# RoaringBitmapTest

./: CMakeLists.txt
include/: roaring.h  roaring.hh
src/: CMakeLists.txt  main.cpp  roaring.c
